tests/ui/singleton-f-0.stderr
error: Unknown field: `a`
 --> $DIR/singleton-f-0.rs:8:13
  |
8 | #[singleton(a = "mutex", b = "rwlock", c)]
  |             ^

error: Unknown field: `b`
 --> $DIR/singleton-f-0.rs:8:26
  |
8 | #[singleton(a = "mutex", b = "rwlock", c)]
  |                          ^

error: Unknown field: `c`
 --> $DIR/singleton-f-0.rs:8:40
  |
8 | #[singleton(a = "mutex", b = "rwlock", c)]
  |                                        ^

error[E0599]: no function or associated item named `use_singleton` found for struct `Dummy` in the current scope
  --> $DIR/singleton-f-0.rs:12:5
   |
9  | struct Dummy(Vec<i32>);
   | ----------------------- function or associated item `use_singleton` not found for this
...
12 |     #[singleton_fn]
   |     ^^^^^^^^^^^^^^^ function or associated item not found in `Dummy`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `use_singleton`, perhaps you need to implement it:
           candidate #1: `blockz::singleton::Singleton`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `use_mut_singleton` found for struct `Dummy` in the current scope
  --> $DIR/singleton-f-0.rs:17:5
   |
9  | struct Dummy(Vec<i32>);
   | ----------------------- function or associated item `use_mut_singleton` not found for this
...
17 |     #[singleton_fn]
   |     ^^^^^^^^^^^^^^^ function or associated item not found in `Dummy`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `use_mut_singleton`, perhaps you need to implement it:
           candidate #1: `blockz::singleton::Singleton`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `use_mut_singleton_with_arg` found for struct `Dummy` in the current scope
  --> $DIR/singleton-f-0.rs:22:5
   |
9  | struct Dummy(Vec<i32>);
   | ----------------------- function or associated item `use_mut_singleton_with_arg` not found for this
...
22 |     #[singleton_fn]
   |     ^^^^^^^^^^^^^^^ function or associated item not found in `Dummy`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `use_mut_singleton_with_arg`, perhaps you need to implement it:
           candidate #1: `blockz::singleton::Singleton`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `use_singleton_with_arg` found for struct `Dummy` in the current scope
  --> $DIR/singleton-f-0.rs:27:5
   |
9  | struct Dummy(Vec<i32>);
   | ----------------------- function or associated item `use_singleton_with_arg` not found for this
...
27 |     #[singleton_fn]
   |     ^^^^^^^^^^^^^^^ function or associated item not found in `Dummy`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `use_singleton_with_arg`, perhaps you need to implement it:
           candidate #1: `blockz::singleton::Singleton`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
